# HORUS

./: .gitignore  CMakeLists.txt  README.md  release_notes.md
files/: .gitignore  CMakeLists.txt  LICENSE  README.md
files/src/: console.hpp  crypto.cpp  crypto.hpp  http.cpp  http.hpp  intel.cpp  intel.hpp  ioc.hpp  json.hpp  main.cpp  pe.hpp  signatures.hpp
files/tests/: test_ioc.cpp  test_json.cpp  test_pe.cpp  test_score.cpp
src/: console.hpp  crypto.cpp  crypto.hpp  http.cpp  http.hpp  intel.cpp  intel.hpp  ioc.hpp  json.hpp  main.cpp  pe.hpp  signatures.hpp  ueba.hpp
tests/: test_ioc.cpp  test_json.cpp  test_pe.cpp  test_score.cpp
